[package]
name = "chenbao_cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = { version = "0.11.0", features = [
    "editor",
    "fuzzy-select",
    # "history",
    "password",
    # "completion",
] }
owo-colors = "4.1.0"
prettytable = "0.10.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
